--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -9,11 +9,14 @@
 	color: #CC00AA;
 }
 
-/* this style exists to make it obvious that you've successfully linked
-   the CSS to the page. feel free to remove it once the link is working. */
 body {
-     border: 1px dotted gray;
      padding: 20px;
+     background-color: #ffffff;
+     font: 12px Arial, sans-serif;
+}
+
+a {
+     
 }
 
 .jumbotron {
